--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "html-builder task for RSSchool",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "node 01-read-file": "npm run 01-read-file/index.js"
+    "node 01-read-file": "npm run 01-read-file/index.js",
+    "node 02-write-file": "npm run 02-write-file/index.js"
   },
   "author": "evgeniimal",
   "license": "ISC",
