feat: add 03-files-in-folder script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "node 01-read-file": "npm run 01-read-file/index.js",
-    "node 02-write-file": "npm run 02-write-file/index.js"
+    "node 02-write-file": "npm run 02-write-file/index.js",
+    "node 03-files-in-folder": "npm run 03-files-in-folder/index.js"
   },
   "author": "evgeniimal",
   "license": "ISC",
